%%{init: {"theme":"base","themeVariables":{"background":"transparent","primaryColor":"#F8FAFC","primaryTextColor":"#111827","primaryBorderColor":"#64748B","lineColor":"#64748B","secondaryColor":"#EEF2FF","tertiaryColor":"#ECFDF5","fontFamily":"Arial","fontSize":"14px"},"er":{"diagramPadding":24,"layoutDirection":"TB","minEntityWidth":110,"minEntityHeight":50,"entityPadding":12,"useMaxWidth":true}}}%%
erDiagram
    USER_ACCOUNT o|--o{ CONTACT : "is assigned"
    USER_ACCOUNT o|--o{ OPPORTUNITY : "owns"
    USER_ACCOUNT o|--o{ ACTIVITY : "handles"

    CONTACT ||--o| CORPORATE_CONTACT : "may represent"
    CORPORATE_CONTACT ||--o{ EMPLOYEE : "employs"
    CONTACT ||--o{ ENROLLMENT : "has"
    CONTACT ||--o{ OPPORTUNITY : "creates"
    CONTACT ||--o{ ACTIVITY : "receives"
    CONTACT ||--o{ MEDITATION_SESSION : "books"
    CONTACT ||--o{ SESSION_INVOICE : "is billed"
    CONTACT o|--o{ ISSUE_REPORT : "reports by email"

    COURSE ||--o{ COURSE_SESSION : "offers"
    COURSE ||--o| COURSE_METRICS : "accumulates"
    COURSE_SESSION ||--o{ ENROLLMENT : "contains"
    OPPORTUNITY o|--o{ ACTIVITY : "is followed up by"
    TRAINER ||--o{ MEDITATION_SESSION : "delivers"
    MEDITATION_SESSION ||--o| SESSION_INVOICE : "generates"

    USER_ACCOUNT {
        bigint id PK
        string email UK
        string role
    }
    CONTACT {
        bigint id PK
        string contact_type
        string email UK
        string lead_status
        int lead_score
    }
    CORPORATE_CONTACT {
        bigint contact_id PK
        string company_name
        string industry
    }
    EMPLOYEE {
        bigint id PK
        bigint company_id
        string email
        string work_profile
    }
    COURSE {
        bigint id PK
        string code UK
        string name
        string category
        boolean active
    }
    COURSE_SESSION {
        bigint id PK
        bigint course_id FK
        string status
        date start_date
        date end_date
    }
    ENROLLMENT {
        bigint id PK
        bigint contact_id FK
        bigint session_id FK
        string status
        int rating
        string feedback
    }
    OPPORTUNITY {
        bigint id PK
        bigint client_id FK
        string stage
        decimal estimated_value
    }
    ACTIVITY {
        bigint id PK
        bigint contact_id FK
        bigint opportunity_id FK
        string activity_type
    }
    TRAINER {
        bigint id PK
        string email UK
        string first_name
        string last_name
    }
    MEDITATION_SESSION {
        bigint id PK
        bigint trainer_id FK
        bigint contact_id
        date session_date
        int start_hour
        int end_hour
    }
    SESSION_INVOICE {
        bigint id PK
        bigint session_id
        bigint client_id
        decimal subtotal
        decimal discount_rate
        decimal total
        string status
    }
    COURSE_METRICS {
        bigint course_id PK
        bigint impressions
        bigint clicks
    }
    ISSUE_REPORT {
        bigint id PK
        string reporter_email
        string status
        string message
    }
